--- a/Client Android/MShiper1/app/src/main/res/values/strings.xml
+++ b/Client Android/MShiper1/app/src/main/res/values/strings.xml
@@ -5,4 +5,10 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+    <string-array name="spinnerItems">
+        <item>item1</item>
+        <item>item2</item>
+        <item>item3</item>
+        <item>item4</item>
+    </string-array>
 </resources>
