--- a/Client Android/MShiper1/app/src/main/res/values/strings.xml
+++ b/Client Android/MShiper1/app/src/main/res/values/strings.xml
@@ -5,5 +5,6 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="runtime_permissions_txt">\"Enable Permissions from settings\"</string>
 
 </resources>
