--- a/Client Android/MShiper1/app/src/main/res/values/strings.xml
+++ b/Client Android/MShiper1/app/src/main/res/values/strings.xml
@@ -15,9 +15,11 @@
     <string name="completeDetail">Hoàn thành</string>
     <string name="cancelDetail">Hủy</string>
     <string name="textSearch">Tìm kiếm</string>
+    <string name="textContact">Liên hệ</string>
     <string name="statusCancelDetail">Hủy</string>
     <string name="repUpdateFailed">Cập nhật không thành công</string>
     <string name="repUpdateSuccess">Cập nhật thành công</string>
     <string name="denomination">VNĐ</string>
+    <string name="searchContact">Tìm bạn bè…</string>
 
 </resources>
